--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,21 @@
+# On the script
 
+from airflow import DAG
+
+from datetime import datetime, timedelta
+from airflow.decorators import task
+from airflow.operators.python import PythonOperator
+from airflow.operators.empty import EmptyOperator
+from airflow.operators.bash import BashOperator
+from airflow.providers.postgres.operators.postgres import PostgresOperator
+from airflow.hooks.base_hook import BaseHook
+from airflow.hooks.postgres_hook import PostgresHook
+
+#Import packages and dependencies
+import pickle
+import json
+import pandas as pd
+import boto3
+from botocore.client import Config
+import os
+from io import StringIO
